--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <title>JavaScript Lab</title>
 </head>
 <body>
-  hello
+  <div id="main">
+    <div>
+      <div>
+          <input type="text" id="input"/>
+          <input type="submit" value="Click Me"/>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
