--- a/index.html
+++ b/index.html
@@ -4,16 +4,37 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>JavaScript Lab</title>
+  <title>Listening to Nodes</title>
+  <style>
+   div {
+     border: 1px solid red;
+     padding: 6px;
+     min-height: 12px;
+   }
+  </style>
 </head>
 <body>
-  <div id="main">
+  <main id="main">My ID is "main"!</main>
+  <br />
+  <div>
+    <label>Input:</label><input />
+  </div>
+  <br />
+  <div>
+    1
     <div>
+      2
       <div>
-          <input type="text" id="input"/>
-          <input type="submit" value="Click Me"/>
+        3
+        <div>
+          4
+          <div>
+            5
+          </div>
+        </div>
       </div>
     </div>
   </div>
+  <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
