--- a/index.html
+++ b/index.html
@@ -1,40 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Listening to Nodes</title>
-  <style>
-   div {
-     border: 1px solid red;
-     padding: 6px;
-     min-height: 12px;
-   }
-  </style>
-</head>
-<body>
-  <main id="main">My ID is "main"!</main>
-  <br />
-  <div>
-    <label>Input:</label><input id="input" />
-  </div>
-  <br />
-  <div>
-    1
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Listening to Nodes</title>
+    <style>
+      div {
+        border: 1px solid red;
+        padding: 6px;
+        min-height: 12px;
+      }
+    </style>
+  </head>
+  <body>
+    <main id="main">My ID is "main"!</main>
+    <br />
     <div>
-      2
+      <input id="button" type="button" value="Click Me!" />
+    </div>
+    <br />
+    <div>
+      1
       <div>
-        3
+        2
         <div>
-          4
+          3
           <div>
-            5
+            4
+            <div>5</div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <script type="text/javascript" src="index.js"></script>
-</body>
+    <script type="text/javascript" src="index.js"></script>
+  </body>
 </html>
